--- a/packages.yml
+++ b/packages.yml
@@ -61,7 +61,7 @@ flatpak_packages:
   # Simon
   - com.github.IsmaelMartinez.teams_for_linux
   - org.freeplane.App
-  - flathub com.spotify.Client
+  - com.spotify.Client
   - com.valvesoftware.Steam
   # David
   - com.github.Eloston.UngoogledChromium
